Fix for mis-alignment

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -119,6 +119,14 @@ input[type="submit"] {
   color: #fff;
 }
 
+.show-desktop {
+  display: block;
+}
+
+.show-mobile {
+  display: none;
+}
+
 @media (max-width: 767px) {
   .search-prompt {
     font-size: 26px;
@@ -129,11 +137,17 @@ input[type="submit"] {
   video {
     display: none;
   }
+  .show-desktop {
+    display: none;
+  }
+  .show-mobile {
+    display: block;
+  }
 }
 
 @media (max-width: 1199px) {
   .content.row.front-page {
-    margin: 100px 30px 0;
+    margin: 0px 30px;
   }
 }
 
